// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering tests Step 1 - organisation name 1`] = `
<div
  className="ui segment full-height"
>
  <h1
    className="ui header"
  >
    Good to see you, 
    Unit Test
  </h1>
  <div>
    <div
      className="ui fluid steps"
    >
      <div
        className="active step"
        onClick={[Function]}
      >
        <div
          className="content"
        >
          <div
            className="title"
          >
            Organisation name
          </div>
          <div
            className="description"
          >
            Choose a name for your organisation
          </div>
        </div>
      </div>
      <div
        className="disabled step"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at icon"
        />
        <div
          className="content"
        >
          <div
            className="title"
          >
            URL
          </div>
          <div
            className="description"
          >
            Create your first URL
          </div>
        </div>
      </div>
    </div>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <div
          className="field"
        >
          <label>
            Organisation name
          </label>
          <div
            className="ui fluid input"
          >
            <input
              name="organisationName"
              onChange={[Function]}
              placeholder="mybrilliantcompany"
              type="text"
              value="unit-test-org-name"
            />
          </div>
        </div>
      </div>
      <div
        className="field"
      >
        <button
          className="ui button"
          onClick={[Function]}
          wizardIdentifier="next-done-button"
        >
          Next
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Rendering tests Step 2 - endpoint url 1`] = `
<div
  className="ui segment full-height"
>
  <h1
    className="ui header"
  >
    Good to see you, 
    Unit Test
  </h1>
  <div>
    <div
      className="ui fluid steps"
    >
      <div
        className="step"
        onClick={[Function]}
      >
        <div
          className="content"
        >
          <div
            className="title"
          >
            Organisation name
          </div>
          <div
            className="description"
          >
            Choose a name for your organisation
          </div>
        </div>
      </div>
      <div
        className="active step"
        onClick={[Function]}
      >
        <i
          aria-hidden="true"
          className="at icon"
        />
        <div
          className="content"
        >
          <div
            className="title"
          >
            URL
          </div>
          <div
            className="description"
          >
            Create your first URL
          </div>
        </div>
      </div>
    </div>
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="required field"
      >
        <label>
          URL
        </label>
        <div
          className="ui labeled input"
        >
          <div
            className="ui label label"
            onClick={[Function]}
          >
            https://webhook-tester-1547141127436.appspot.com/webhook/unit-test-org/
          </div>
          <input
            name="path"
            onChange={[Function]}
            placeholder="my/custom/url"
            type="text"
            value="unit-test-path"
          />
        </div>
      </div>
      <div
        className="field"
      >
        <button
          className="ui button"
          onClick={[Function]}
          wizardIdentifier="next-done-button"
        >
          Done
        </button>
      </div>
    </form>
  </div>
</div>
`;
